# sourcegraph-public-snapshot

./: '  ..graphqlrc 2.yml.icloud  ..percy 2.yml.icloud  .Dockerfile  .arcconfig  .babelrc  .bazel_fix_commands.json  .bazelignore  .bazeliskrc  .bazelrc  .bazelrc-nix.backup  .bazelversion  .browserslistrc  .ci-richstyle.yml  .codecov.yml  .dependency-cruiser.js  .dockerignore  .drone.yml  .editorconfig  .env  .env.example  .eslintignore  .eslintrc.js  .gitattributes  .gitignore  .gitmodules  .gitpod.yml  .golangci-warn.yml  .golangci.enforced.yml  .golangci.yml  .goreleaser.yml  .graphqlconfig  .graphqlrc.yml  .hadolint.yaml  .huskyrc.json  .mailmap  .mocharc.js  .mocharc.json  .npmrc  .percy.yml  (+227 more)
.aspect/bazelrc/: BUILD.bazel  bazel7.bazelrc  ci.bazelrc  ci.db.bazelrc  ci.macos.bazelrc  ci.sourcegraph.bazelrc  common.bazelrc  common6.bazelrc  convenience.bazelrc  correctness.bazelrc  github.bazelrc  local.bazelrc  (+4 more)
client/: .README 2.md.icloud  BUILD.bazel  Dockerfile  README.md  build.sh  graphqlInterfaces.gen.d.ts  package.json  schema.json
dev/: .gitignore  2020-08-update-default-branch-to-main.sh  BUILD.bazel  CLA.txt  CODEOWNERS  Caddyfile  Caddyfile-sveltekit  Procfile  add_https_domain_to_hosts.sh  add_migration.sh  all.sh  babel.bzl  badge-of-unix-shame.sh  bazel_buildkite_stamp_vars.sh  bazel_configure_accept_changes.sh  bazel_stamp_vars.sh  benchdiff.sh  browser-extension.sh  caddy.sh  changewatch.sh  check-for-template-inlines  check-go-generate-all  check-go-lint  check-imports  check-test-ownership.sh  check-tokens.sh  circle-build-docker-image.sh  circle-ci-gather-coverage.sh  circle-ci-run-tests.sh  circle-ci-split-pkgs.sh  circle-release-sourcemaps.sh  codecov.yml  codeinsights-db.sh  comby-install-or-upgrade.sh  compose.yml  config.core.json  config.json  contributors.go  contributors.sh  critical-config.json  (+140 more)
doc/: .gitignore  .prettierignore  BUILD.bazel  CODENOTIFY  CODENOTIFY 2  KNOWN-ISSUES.md  _generated.push.sh  cody.md  dependency_decisions.yml  diff.sh  doc.go  doc_test.go  docs.js  docs.sum  docsite.json  index.md  package.json  quickstart.md  serve.sh  sidebar.md  test.sh
doc-legacy/: BUILD.bazel  serve.sh
fun/: BUILD.bazel
internal/: BUILD.bazel  buf.yaml  demoexamples  image.binpb
migrations/: .README 2.md.icloud  .gitignore  .migrations 2.go.icloud  1501274533_add_comments.down.sql  1501274533_add_comments.up.sql  1503574972_extensions.down.sql  1503574972_extensions.up.sql  1503575261_repos.down.sql  1503575261_repos.up.sql  1503575588_global_deps.down.sql  1503575588_global_deps.up.sql  1503621752_add_fields_to_threads.down.sql  1503621752_add_fields_to_threads.up.sql  1503961087_add_default_timestamps.down.sql  1503961087_add_default_timestamps.up.sql  1504637681_orgs.down.sql  1504637681_orgs.up.sql  1504821553_add_org_constraints.down.sql  1504821553_add_org_constraints.up.sql  1505422473_local_repo_org_id.down.sql  1505422473_local_repo_org_id.up.sql  1505505790_add_comments_user_id.down.sql  1505505790_add_comments_user_id.up.sql  1505517457_rename_org_members_columns.down.sql  1505517457_rename_org_members_columns.up.sql  1505758681_org_repos.down.sql  1505758681_org_repos.up.sql  1505882864_update_org_members.down.sql  1505882864_update_org_members.up.sql  1506060483_range_length.down.sql  1506060483_range_length.up.sql  1506466653_add_users.down.sql  1506466653_add_users.up.sql  1506646657_alter_orgs_citext.down.sql  1506646657_alter_orgs_citext.up.sql  1506710237_user_org_constraint_updates.down.sql  1506710237_user_org_constraint_updates.up.sql  1506989402_add_tags.down.sql  1506989402_add_tags.up.sql  1507227971_branches_on_threads.down.sql  (+600 more)
monitoring/: .README 2.md.icloud  .gitattributes  BUILD.bazel  CODENOTIFY  CODENOTIFY 2  README.md  executor.go  frontend.go  generate_config_test.sh  generator.go  git_server.go  github_proxy.go  go.mod  go.sum  main.go  postgres.go  precise_code_intel_api_server.go  precise_code_intel_bundle_manager.go  precise_code_intel_converter.go  precise_code_intel_index_manager.go  precise_code_intel_indexer.go  precise_code_intel_server.go  precise_code_intel_worker.go  prometheus.go  query_runner.go  replacer.go  repo_updater.go  searcher.go  shared.go  symbols.go  syntect_server.go  update_check.go  zoekt_index_server.go  zoekt_web_server.go
schema/: .repo_setter 2.go.icloud  BUILD.bazel  README.md  action_stringdata.go  actions.schema.json  aws_codecommit.schema.json  aws_codecommit_stringdata.go  azuredevops.schema.json  basic.schema.json  basic_stringdata.go  batch_spec.schema.json  batch_spec_stringdata.go  bitbucket_cloud.schema.json  bitbucket_cloud_stringdata.go  bitbucket_server.schema.json  bitbucket_server_stringdata.go  bitbucket_server_util.go  bitbucket_server_utils.go  bitbucketcloud_util.go  campaign_spec.schema.json  campaign_spec_stringdata.go  changeset_spec.schema.json  changeset_spec_stringdata.go  cody_pro_util.go  codypro_util.go  core.schema.json  core_stringdata.go  critical.schema.json  critical_stringdata.go  datacenter.schema.json  defaults.go  extension.schema.json  extension_schema.go  extension_stringdata.go  forwardcompat_auth_providers.go  gen.go  gen.sh  general_protocol.schema.json  general_protocol_stringdata.go  gerrit.schema.json  (+42 more)
src-cli/: .dockerignore  .gitignore  .golangci.yml  .goreleaser-patch.yml  .goreleaser.yml  BUILD.bazel  CHANGELOG.md  CODEOWNERS  DEVELOPMENT.md  Dockerfile  Dockerfile.release  README.md  WORKSPACE  go.mod  go.sum  renovate.json
src-tauri/: .gitignore  Cargo.toml  Info.plist  README.md  RELEASE.md  compose-assets.sh  tauri.conf.json  tauri.dev.conf.json  tauri.linux.conf.json  tauri.macos.conf.json
syntax-highlighter/: .gitattributes  BUILD.bazel  CODENOTIFY  Cargo.toml  LICENSE.syntaxes  README.md  gen-license-dependencies.sh  rust-toolchain.toml
testing/: BUILD.bazel  auth_integration_test.sh  backend.sh  backend_integration_test.sh  backend_integration_test_p4.sh  bb.sh  codeintel_integration_test.sh  defs.bzl  e2e_test.sh  migration_test.sh  package.json  playwright.config.ts
tools/: BUILD.bazel  smithy.bazelproject
(+59096 files in other folders)
