sh_test(
    name = "test",
    size = "small",
    timeout = "long",
    srcs = ["test.sh"],
    args = ["$(location //dev/tools:docsite)"],
    data = [
        "//dev/tools:docsite",
        "//doc-legacy/admin/observability:doc_files",
        "//doc-legacy/cli/references:doc_files",
        "//doc-legacy/dev/background-information/telemetry:doc_files",
    ] + glob(
        ["**/*"],
        ["test.sh"],
    ),
    tags = [
        "requires-network",
    ],
)

sh_binary(
    name = "serve",
    srcs = ["serve.sh"],
    args = ["$(location //dev/tools:docsite)"],
    data = [
        "//dev/tools:docsite",
        "//doc-legacy/cli/references:doc_files",
    ] + glob(
        ["**/*"],
        ["test.sh"],
    ),
)
