sh_test(
    name = "test",
    size = "small",
    timeout = "long",
    srcs = ["test.sh"],
    args = ["$(location //dev/tools:docsite)"],
    data = [
        "//dev/tools:docsite",
        "//doc/admin/observability:doc_files",
        "//doc/cli/references:doc_files",
        "//doc/dev/background-information/telemetry:doc_files",
    ] + glob(
        ["**/*"],
        ["test.sh"],
    ),
    tags = [
        "manual",  # TODO(JH): remove this test once we've fully switched to a new solution for the dev docs.
        "requires-network",
    ],
)

sh_binary(
    name = "serve",
    srcs = ["serve.sh"],
    args = ["$(location //dev/tools:docsite)"],
    data = [
        "//dev/tools:docsite",
        "//doc/admin/observability:doc_files",
        "//doc/cli/references:doc_files",
    ] + glob(
        ["**/*"],
        ["test.sh"],
    ),
)

sh_binary(
    name = "generated.push",
    srcs = ["_generated.push.sh"],
    args = [
        "$(location //dev/tools:gh)",
        "$(location //tools/md2mdx:md2mdx)",
    ],
    data = [
        "//dev/tools:gh",
        "//tools/md2mdx",
        "//monitoring:generate_config",
        # TODO: once we've put in place the redirections, we can instead
        # use the //doc/cli/references:generate_doc target.
        # https://github.com/sourcegraph/sourcegraph/issues/61230
        "//doc/cli/references:doc_files",
    ],
    tags = ["docs-deliverable"],
)
